# repolens

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
repolens/: __init__.py  __main__.py  analyzer.py  cli.py  github_client.py  models.py
repolens/detectors/: __init__.py  languages.py  package_manager.py  test_framework.py
repolens/generators/: __init__.py  contribute.py  guide.py  markdown_export.py
tests/: fixtures.py  test_analyzer.py  test_cli.py
