[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repolens"
version = "0.1.0"
description = "Open-source CLI for understanding public GitHub repositories faster."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "RepoLens contributors" }
]
keywords = ["github", "cli", "onboarding", "open-source", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "rich>=13.7.0,<14.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
repolens = "repolens.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

